<resources>
    <string name="app_name">StonksNews</string>
    <string name="title_home">News</string>
    <string name="title_stocks">Stocks</string>
    <string name="title_preferences">Preferences</string>
    <string name="see_full_article">See full article: %s</string>
    <string name="pick_a_region">Pick a region</string>
    <string name="trending_symbols">Trending symbols</string>
    <string name="insert_your_favorite_symbols">Insert your favorite symbols</string>
    <string name="examply_symbols_input">E.g. TSLA, AAPL, MSFT</string>
    <string name="preference_news_type_selector">Filter news by your favorite symbols</string>
</resources>