<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lorenzo.stonksnews.ui.news.NewsListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lorenzo.stonksnews.ui.stocks.StocksFragment"
        android:label="@string/title_stocks"
        tools:layout="@layout/fragment_stocks" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lorenzo.stonksnews.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />
</navigation>