<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.PreferencesFragment">

    <TextView
        android:id="@+id/tvInsertSymbols"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/insert_your_favorite_symbols"
        android:textAppearance="@style/PrimaryTextAppearance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/standard_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSymbolsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/tvInsertSymbols"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSymbolsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAllCaps="true"
            android:hint="@string/examply_symbols_input"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoriteSymbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal"
        tools:itemCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSymbolsContainer"
        tools:listitem="@layout/item_favorite_symbol"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scNewsTypeSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/preference_news_type_selector"
        android:layout_margin="@dimen/standard_margin"
        android:textAppearance="@style/PrimaryTextAppearance"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvFavoriteSymbols" />

</androidx.constraintlayout.widget.ConstraintLayout>